kubernetes/external-applications/rancher/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.local.syspawn.com`)
      kind: Rule
      middlewares:
        - name: rancher-headers
      services:
        - name: rancher
          port: 443
  tls:
    secretName: local-syspawn-com-tls
